userChrome.css
#urlbar {
	background-color: #080808 !important;
	color: #ffffff !important;
	border: none !important;
	margin: none !important;
	border-bottom: 1px solid #000000 !important;
	border-left: 1px solid #000000 !important;
	border-radius: 10px 10px 10px 10px !important;}


#urlbar-background{
	background-color: #080808 !important;
	color: #ffffff !important;
  /*border: 1px solid #2b387c !important;*/
	border: none !important;
	margin: none !important;
	padding: none !important;
	border-radius: 10px 10px 10px 10px !important;
}

#titlebar {
	background-color: #080808 !important;
   }


#TabsToolbar .tabbrowser-tab,
#TabsToolbar .tabbrowser-tab .tab-stack,
#TabsToolbar .tabbrowser-tab .tab-background,
#TabsToolbar .tabbrowser-tab .tab-content {
	border-top-left-radius: 7px !important;
	border-top-right-radius: 7px !important;
	margin-top: 1px;
	border: none !important;
	margin: 1px !important;
}

.tab-line {
	display:none !important;
}

.tab-content[selected="true"] {
	background: #030303 !important;
}

.tab-content[selected="false"] {
	background: #1d1d1d !important;
}

#nav-bar {
	background-color: #1d1d1d1d !important;
	border: none !important;
	margin: none !important;
	padding: none !important;
}

#PersonalToolbar{
	background: #080808 !important;
	color: #ffffff !important;
  }
  
.tabbrowser-tab::before, 
.tabbrowser-tab::after{
  display: none !important;
}

.findbar-textbox,
.searchbar-textbox{
    border-color: #000000 !important;
    border-width: 2px !important;
}

/*----------------------hamburger menu-----------------------------*/
/*
Background: #F8F8F8 (#1D1D1D)
Foreground: #111111 (#F5F5F5)
Highlight:  #3F51B5
Accent:     #E7E7E7 (#080808)
*/

.panel-arrow {
	fill: #0a0a0a !important;
	background: transparent !important;
	/*border-color: #0a0a0a !important;*/
}

/* Make the menu round :) */
.panel-arrowcontent{
  background:#0a0a0a !important;
  border: 0px solid #000000 !important;
  border-radius:15px !important;
}

.panel-subview-body {
	color: #f5f5f5 !important;
	background: #0a0a0a !important;
	border: 1px solid #0a0a0a !important;
	border-radius: 15px !important;
}

.subviewbutton.panel-subview-footer {
	background-color: #0a0a0a !important;
	border-top: 0px solid !important;
}

.panel-header {
	border: 1px solid #3f51b5 !important;
	border-radius:20px !important;
	background: #0a0a0a !important;
}

.panel-subview-footer,
[class^="PanelUI-"] {
	color: #f5f5f5 !important;
	background: #0a0a0a !important;
  border-radius: 20px !important;
}

.subviewbutton.panel-subview-footer {
	background-color: #0a0a0a !important;
	border-top: 1px solid #f5f5f5 !important;
	border-radius:20px !important;
}

.appMenu-tp-separator,
toolbarseparator {
	display: visible !important;
	border-color: #0a0a0a !important;
	/*border-radius:10px !important;*/
}

.subviewbutton[shortcut]::after {
	/*font-family: Fira Sans !important;*/
	color: #3f51b5 !important;
}

.subviewbutton-nav::after {
	fill: #3f51b5 !important;
}

#appMenu-popup .subviewbutton .toolbarbutton-text,
#appMenu-popup .panel-arrowcontent,
panelmultiview .toolbaritem-combined-buttons>label {
	font-family: Fira Sans !important;
	font-size: 14px !important;
  border-radius: 20px !important;
}

.PanelUI-subView .toolbaritem-combined-buttons>.subviewbutton-iconic>.toolbarbutton-text {
	display: none !important;
}

/* Hamburger Menu Zoom Control */
#appMenu-zoom-reduce {
	background: transparent !important;
	fill: #3f51b5 !important;
	border: 0px solid #3f51b5 !important;
	border-radius: 20px !important;
}

#appMenu-zoomReset-button label {
	background: transparent !important;
	color: #3f51b5 !important;
	border-radius: 0px !important;
	font-family: "Fira Sans" !important;
}

#appMenu-zoomReset-button {
	background: transparent !important;
	color: #3f51b5 !important;
	border: 1px solid #3f51b5 !important;
	border-radius: 20px !important;
}

#appMenu-fullscreen-button {
	background: transparent !important;
	color: #3f51b5 !important;
	border: 0px solid #3f51b5 !important;
	border-radius: 0px !important;
}

#appMenu-zoomEnlarge-button {
	background: transparent !important;
	color: #3f51b5 !important;
	border: 0px solid #3f51b5 !important;
	border-radius: 0px !important;
}

#appMenu-cut-button,
#appMenu-copy-button,
#appMenu-paste-button {
	color: #3f51b5 !important;
}

.PanelUI-subView .toolbaritem-combined-buttons>.subviewbutton-iconic>.toolbarbutton-text {
	display: none !important;
}
/* hide gift "whats new button" when an update of firefox is done */
#appMenu-whatsnew-button {
	display: none !important;
}

/* Remove the white line in the hamburguer menu */
#PanelUI-button {
	border-image-slice: 0 !important;
	/*hide panel menu separation */
}


/* --- history --- */
#sidebar-box {
  background-color: #0a0a0a !important;
}

#history-panel{
  background-color: #0a0a0a !important;
  }

#viewButton{
  color: #3f51b5 !important;
}

#sidebar-switcher-target{
  color: #3f51b5 !important;
}

#sidebar-splitter{
-moz-box-ordinal-group: 1 !important;
}

